apps/base/nextcloud/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-route
  namespace: nextcloud
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: gateway-system
    sectionName: https-nextcloud
  hostnames:
  - "cloud.kowi.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: Strict-Transport-Security
                value: "max-age=15552000"
      backendRefs:
        - name: nextcloud
          port: 8080
